--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
+general:
+  branches:
+    only:
+      - master
+
 machine:
   timezone:
     Asia/Tokyo
@@ -5,30 +10,21 @@ machine:
     - docker
 
 dependencies:
-#  override:
-#    - docker info
-#    - docker build -t ogajun/latex .
-   pre:
+  pre:
     - docker pull ogajun/latex
-    - git config --global user.email sanofc@gmail.com
-    - git config --global user.name sanofc
+    - git config --global user.email 'sanofc@gmail.com'
+    - git config --global user.name 'sanofc'
+
 test:
   override:
-    - cd ~/docker-latex
-    - ./latex_build.sh example ./tex_src
+    - cd ~/docker-latex && ./latex_build.sh example ./tex_src
 
 deployment:
   release:
-    branch:master
+    branch: master
     commands:
       - cd ~/docker-latex
       - git checkout -b release
       - git add --all :/
       - git commit -m "[ci skip] build pdf"
       - git push -f origin release
-  
-  #hub:
-  #  branch: master
-  #  commands:
-  #    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  #    - docker push sanofc/latex
